[package]
name = "pusher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.24", features = ["macros", "rt-multi-thread"] }
a2 = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.7"

[build-dependencies]
tonic-build = "0.8"
